# mlp-timeseries

./: .gitignore  README.md  configs.py  data.py  experiment.py  mlp.py  plotting.py  pyproject.toml  reporting.py
notebooks/: mackey_glass.ipynb
