[tool.poetry]
name = "time_series"
version = "0.1.0"
description = "Part II of Assignment 1 - DD2437"
authors = ["erikdao <cuong@neuraltalks.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
torch = "^1.7.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
pandas = "^1.2.1"
pytorch-lightning = "^1.1.6"
tqdm = "^4.56.0"
jupyterlab = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
